# NeuralNetworkTrainingVisualization

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  NeuralNetworkTrainingVisualization.exe.manifest  README.md  cmake_install.cmake  structure
docs/: README.md
src/: main.cpp
src/app/: LanguageManager.cpp  LanguageManager.h  SettingsDialog.cpp  SettingsDialog.h  ThemeManager.cpp  ThemeManager.h  mainwindow.cpp  mainwindow.h
src/app/panels/: ControlPanel.cpp  ControlPanel.h  MetricsPanel.cpp  MetricsPanel.h
src/app/widgets/: ConfusionMatrixWidget.cpp  ConfusionMatrixWidget.h  DigitCanvasWidget.cpp  DigitCanvasWidget.h  FeatureInputWidget.cpp  FeatureInputWidget.h  LossGraphWidget.cpp  LossGraphWidget.h  MisclassifiedWidget.cpp  MisclassifiedWidget.h  NeuralNetworkView.cpp  NeuralNetworkView.h
src/core/activations/: Activation.h  ReLU.h  Sigmoid.h  Softmax.h  Tanh.h
src/core/layers/: DenseLayer.cpp  DenseLayer.h  Layer.h
src/core/losses/: CrossEntropy.h  Loss.h  MSELoss.h
src/core/math/: Init.h  MathUtils.h  Transformer.h
src/core/model/: SequentialModel.cpp  SequentialModel.h
src/core/training/: Metrics.h  Trainer.cpp  Trainer.h  TrainingHistory.h
src/datasets/: Batch.h  CSVLoader.cpp  CSVLoader.h  DataSample.h  Dataset.h  MNISTLoader.cpp  MNISTLoader.h
src/threading/: AnalysisResult.h  TrainingWorker.cpp  TrainingWorker.h
src/utils/: ModelSerializer.cpp  ModelSerializer.h
translations/: nn_ru.ts
